--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
+    "antd": "^5.14.0",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
